// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`loader > renders active with custom percentage 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="styles__tkulld2"
      role="progressbar"
      style="height: var(--rwwhsl9h); width: var(--rwwhsl9h);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--rwwhsl5j)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders active with default percentage 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="styles__tkulld2"
      role="progressbar"
      style="height: var(--rwwhsl9h); width: var(--rwwhsl9h);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--rwwhsl5j)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--rwwhsl9h); width: var(--rwwhsl9h);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--rwwhsl5j)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with color neutral and primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--rwwhsl9h); width: var(--rwwhsl9h);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--rwwhsl1l)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--rwwhsl9h); width: var(--rwwhsl9h);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--rwwhsl5j)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with percentage 75 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      aria-valuetext="75%"
      class="styles__tkulld2"
      role="progressbar"
      style="height: var(--rwwhsl9h); width: var(--rwwhsl9h);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--rwwhsl5j)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="65.97344572538566"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with sentiment danger 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--rwwhsl9h); width: var(--rwwhsl9h);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--rwwhsl9)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--rwwhsl9h); width: var(--rwwhsl9h);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--rwwhsl1l)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with sentiment primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--rwwhsl9h); width: var(--rwwhsl9h);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--rwwhsl5j)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with sentiment secondary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--rwwhsl9h); width: var(--rwwhsl9h);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--rwwhsl67)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with sentiment success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--rwwhsl9h); width: var(--rwwhsl9h);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--rwwhsl6v)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with size large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--rwwhsl9f); width: var(--rwwhsl9f);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--rwwhsl5j)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with size medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--rwwhsl9d); width: var(--rwwhsl9d);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--rwwhsl5j)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with size small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--rwwhsl9c); width: var(--rwwhsl9c);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--rwwhsl5j)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with size xlarge 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--rwwhsl9h); width: var(--rwwhsl9h);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--rwwhsl5j)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with size xsmall 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--rwwhsl9a); width: var(--rwwhsl9a);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--rwwhsl5j)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with size xxlarge 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--rwwhsl9l); width: var(--rwwhsl9l);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__tkulld1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__tkulld3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--rwwhsl5j)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;
